blocks and block controller added

--- a/game.html
+++ b/game.html
@@ -14,8 +14,7 @@
 
 <body>
   <main>
-    <div class="grid m-3 p-2">
-      <div class="block"></div>
+    <div class="container-fluid, grid m-3">
     </div>
   </main>
 
