--- a/frontend/game.html
+++ b/frontend/game.html
@@ -13,11 +13,16 @@
 </head>
 
 <body>
-  <main>
+  <main class="main">
     <h1 class="d-inline p-2 bg-primary text-white display-6, score">Score</h1>
-
-    <div class="container-fluid, grid m-5">
+    <button type="button" class="btn btn-outline-danger" id="startBtn">Start</button>
+    <div class="con">
+      <div class="grid"></div>
+      <div class="highscoreBoard">
+      </div>
     </div>
+
+
   </main>
 
 
