--- a/frontend/game.html
+++ b/frontend/game.html
@@ -18,8 +18,8 @@
       <h1 class="d-inline p-2 bg-primary text-white display-6, score">Score</h1>
 
       <form action="#" id="startForm">
-        <label for="name">Name</label>
-        <input type="text" id="name" required>
+        <label for="name" class="text-danger">Name</label>
+        <input type="text" id="name" name="username" placeholder="Enter username" required>
         <button type="submit" class="btn btn-outline-danger">Start</button>
       </form>
     </div>
