sorting highscore list

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -30,12 +30,19 @@
       </div>
     </div>
 
-
   </main>
+  <footer class="footer">
+    <p class="text-muted text-info pb-0 font-monospace">
+      <span>Breakout is an arcade video game developed and published by Atari, Inc. and released on May 13, 1976. It was
+        designed by
+        Steve Wozniak, based on conceptualization from Nolan Bushnell and Steve Bristow who were influenced by the
+        seminal 1972
+        Atari arcade game Pong</span>
+      <br>
+      <span><a href="https://github.com/Willz01/breakout-js" target="_blank">Github repo</a></span>
+    </p>
 
-
-
-
+  </footer>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
 
